<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/actionbar_vertical_margin"
    tools:context="com.g7.wanbao.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/account_tv_cardID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_tv_cardID" />

    <EditText
        android:id="@+id/account_edtTxt_cardID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:labelFor="@id/account_edtTxt_cardID" />

    <Button
        android:id="@+id/account_btn_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_btn_save" />

    <Button
        android:id="@+id/account_btn_init"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_btn_init" />
    
    <Button
        android:id="@+id/account_btn_order"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_btn_order" />
    
</LinearLayout>