<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/actionbar_vertical_margin"
    tools:context="com.g7.wanbao.MainActivity$PlaceholderFragment" >
	
	
	<TextView
        android:id="@+id/cart_tv_already"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cart_tv_already"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#816047"
		android:layout_marginLeft="@dimen/activity_horizontal_margin" />
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
		android:layout_marginLeft="@dimen/activity_horizontal_margin"
		android:layout_marginRight="@dimen/activity_horizontal_margin">

        <CheckBox
            android:id="@+id/cart_cb_selectAll"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/cart_cb_selectAll"
            android:textSize="16sp"
            android:textColor="#666" />

    	<TextView
        	android:id="@+id/cart_tv_qt"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:text="@string/cart_tv_qt"
        	android:textSize="15sp"
        	android:gravity="end"
        	android:layout_marginEnd="5sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/cart_lv_items"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:transcriptMode="alwaysScroll"
        android:divider="#b38562"
        android:dividerHeight="0.7sp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
        	android:id="@+id/cart_btn_delete"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:text="@string/cart_btn_delete"
        	android:textColor="#ffffff"
        	android:background="@drawable/roundedbutton"
        	android:layout_margin="5sp" />
        
        <Button
        	android:id="@+id/cart_btn_pay"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:text="@string/cart_btn_pay"
        	android:textColor="#ffffff"
        	android:background="@drawable/roundedbutton"
            android:clickable="false"
        	android:layout_margin="5sp" />
        
    </LinearLayout>
</LinearLayout>