<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/actionbar_vertical_margin"
    tools:context="com.g7.wanbao.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/search_tv_keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_tv_keyword"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="31sp"
            android:layout_height="31sp"
            android:src="@drawable/ic_search_brown_24dp"
            android:contentDescription="@string/desc"
            android:layout_gravity="center" />
        
        <EditText
            android:id="@+id/search_edtTxt_keyword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_edtTxt_hint"
            android:inputType="text"
            android:labelFor="@id/search_edtTxt_keyword"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:textSize="20sp" />
        
    </LinearLayout>

    <Button
        android:id="@+id/search_btn_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_btn_submit"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/search_lv_items"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:divider="#816047"
        android:dividerHeight="1sp"
        android:transcriptMode="alwaysScroll" >
    </ListView>

</LinearLayout>