<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- item name & price -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/detail_tv_name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:padding="7sp"
            android:paddingBottom="0sp"
            android:text="@string/detail_tv_name"
            android:textSize="24sp"
            android:textStyle="bold" />
    	
        <TextView
            android:id="@+id/detail_tv_price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="end"
            android:padding="7sp"
            android:paddingBottom="0sp"
            android:text="@string/detail_tv_price"
            android:textColor="#ff0000"
            android:textSize="24sp" />
        
    </LinearLayout>

    <!-- pagerstrip -->

    <com.g7.wanbao.object.SlidingTabLayout
        android:id="@+id/detail_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/detail_vp_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1sp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/detail_btn_pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1sp"
            android:layout_weight="1"
            android:background="#816047"
            android:clickable="false"
            android:text="@string/detail_btn_pay"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/detail_btn_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1sp"
            android:layout_weight="1"
            android:background="#816047"
            android:text="@string/detail_btn_cartAdd"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/detail_btn_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#816047"
            android:text="@string/detail_btn_favoriteAdd"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>