<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- loading circle -->

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:id="@+id/commentLoading_pb_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/commentLoading_tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/commentLoading_pb_circle"
            android:layout_centerHorizontal="true"
            android:text="@string/loading"
            android:textSize="15sp" />
    </RelativeLayout>

    <!-- comments -->

    <ListView
        android:id="@+id/comment_lv_comments"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:divider="@null"
        android:scrollbars="none"
        android:transcriptMode="disabled" >
    </ListView>

    <TextView
        android:id="@+id/detail_tv_makeComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:background="#816047"
        android:padding="1sp"
        android:text="@string/detail_tv_makeComment"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <!-- make comment -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:contentDescription="@string/desc" >

        <EditText
            android:id="@+id/comment_edtTxt_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_marginTop="0sp"
            android:layout_weight="5"
            android:hint="@string/comment_edtTxt_hint"
            android:inputType="text"
            android:labelFor="@+id/comment_edtTxt_msg" >
        </EditText>

        <ImageButton
            android:id="@+id/comment_ib_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_marginTop="0sp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:contentDescription="@string/desc"
            android:scaleType="centerInside"
            android:src="@drawable/ic_create_white_18dp" />
    </LinearLayout>

</LinearLayout>