<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/actionbar_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.g7.wanbao.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/order_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3sp"
        android:text="@string/order_tv_title"
        android:textColor="#816047"
        android:textSize="20sp"
        android:textStyle="bold" />
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#816047"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/order_tv_itemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1sp"
            android:layout_weight="7"
            android:background="#ffffff"
            android:gravity="center"
            android:paddingTop="3sp"
            android:text="@string/order_tv_itemName"
            android:textColor="#816047"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/order_tv_perItemPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1sp"
            android:layout_weight="2"
            android:background="#ffffff"
            android:gravity="center"
            android:paddingTop="3sp"
            android:text="@string/order_tv_perItemPrice"
            android:textColor="#816047"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/order_tv_itemQt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1sp"
            android:layout_weight="2"
            android:background="#ffffff"
            android:gravity="center"
            android:paddingTop="3sp"
            android:text="@string/order_tv_itemQt"
            android:textColor="#816047"
            android:textSize="15sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/order_lv_items"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:divider="#816047"
        android:dividerHeight="1sp"
        android:transcriptMode="alwaysScroll" >
    </ListView>
    
    <WebView
        android:id="@+id/order_imageWebView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:scrollbars="none" />

</LinearLayout>