<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/actionbar_vertical_margin"
    tools:context="com.g7.wanbao.MainActivity$PlaceholderFragment" >
	<CheckBox
        android:id="@+id/cart_cb_selectAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cart_cb_selectAll"
        android:textSize="16sp"
        android:textColor="#666"
		android:layout_marginLeft="@dimen/activity_horizontal_margin" />
	
    <ListView
        android:id="@+id/favorite_lv_items"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:divider="#b38562"
        android:dividerHeight="0.7sp"
        android:transcriptMode="alwaysScroll" >
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
        	android:id="@+id/favorite_btn_delete"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:background="@drawable/roundedbutton"
        	android:textColor="#ffffff"
        	android:layout_margin="5sp" 
        	android:text="@string/favorite_btn_delete" />
        
        <Button
        	android:id="@+id/favorite_btn_addToCart"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:background="@drawable/roundedbutton"
        	android:textColor="#ffffff"
        	android:layout_margin="5sp" 
        	android:text="@string/favorite_btn_addToCart" />
        
    </LinearLayout>
    
</LinearLayout>