<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2sp" >

    <!-- item image -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="8sp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/order_iv_img"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:contentDescription="@string/item_iv_img"
            android:src="@drawable/img_not_found" />

        <!-- item info -->

        <TextView
            android:id="@+id/order_tv_name"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:gravity="center_vertical"
            android:layout_marginStart="5sp"
            android:layout_weight="4"
            android:textColor="#000000"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/order_tv_per_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_weight="2"
            android:textColor="#ff0000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/order_tv_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_weight="2"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/order_btn_hint"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:text="@string/order_btn_hint"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/order_tv_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/order_tv_priceTab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/order_tv_priceTab"
            android:textColor="#000000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/order_tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textColor="#ff0000"
            android:textSize="26sp" />
    </LinearLayout>

</LinearLayout>